# AI3618-SONIC

./: .gitignore  OPEN_UNITY_HERE.txt  README.md
docs/: COORDINATE_SYSTEMS.md  COPY_INSTALL.md  DEMO_CHECKLIST.md  KEYBOARD_TEST.md  MUJOCO_FPV_QUEST.md  PIPELINE.md  PROTOCOL.md  QUEST_APK.md  QUEST_LINK.md  SETUP_WSL.md  SONIC_CODE_NOTES.md  UNITY_SETUP.md  UNITY_V2_SETUP.md
quest-mirror/: README.md
quest-mirror-unity/: DEPRECATED_OLD.md
quest-mujoco-vr/: README.md
scripts/: allow_fpv_firewall.ps1  allow_unity_udp_firewall.ps1  apply_gr00t_patches.sh  bootstrap_sonic_wsl.sh  configure_pypi_mirror.sh  copy_g1_to_unity_v2.sh  export_g1_meshes_to_unity.py  export_g1_meshes_to_unity.sh  export_gr00t_patches.sh  fetch_git_lfs.sh  fetch_meta_quest_apk.sh  fetch_unitree_lfs.sh  fix_windows_adb.ps1  install_tensorrt.sh  kill_sonic_zmq.sh  pack_for_distribution.py  pack_for_distribution.sh  prepare_github_repo.sh  print_keyboard_pipeline.sh  quest_adb_wsl.sh  quest_install_mirror_apk.sh  reset_sonic_session.sh  run_bridge_quest_apk.sh  run_bridge_unity_win.sh  run_sim_t1_fpv_quest.sh  run_sim_t1_multitask.sh  run_sim_t1_wsl.sh  setup_fpv_quest_network.ps1  setup_from_zip.sh  sync_unity_to_windows.sh  (+6 more)
sonic-bridge/: pyproject.toml  requirements.txt
sonic-bridge/sonic_bridge/: __init__.py  __main__.py  alignment.py  g1_fk.py  g1_hand_display.py  g1_visual_links.py  hand_ik.py  hand_proxy_layout.py  keyboard_teleop.py  mujoco_replay.py  protocol.py  quest_controls.py  recorder.py  replay.py  run_bridge.py  scene_layout.py  standalone_demo.py  tcp_relay.py  zmq_feedback.py
(+352 files in other folders)
