[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sonic-bridge"
version = "0.1.0"
description = "Quest Mirror UDP bridge for SONIC VR 3-point teleop"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.scripts]
sonic-bridge = "sonic_bridge.run_bridge:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sonic_bridge*"]
